style.scss разделён на несколько файлов

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,549 +1,14 @@
-$color-text: #ffffff;
-$border-radius-medium: 10px;
-$border-radius-big: 13px;
-$main-family-text: "Roboto", "Arial", sans-serif;
-$second-family-text: "Open Sans", "Arial", sans-serif;
-
-@mixin big-text {
-  font-size: 24px;
-  line-height: 32px;
-}
-
-@mixin middle-text {
-  font-size: 16px;
-  line-height: 24px;
-}
-
-@mixin small-text {
-  font-size: 14px;
-  line-height: 21px;
-}
-
-@mixin center-block {
-  justify-content: center;
-  align-items: center;
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/roboto-v30-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/roboto-v30-cyrillic_latin-regular.woff") format("woff");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
-  src: url("../fonts/roboto-v30-cyrillic_latin-500.woff2") format("woff2"), url("../fonts/roboto-v30-cyrillic_latin-500.woff") format("woff");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  src: url("../fonts/roboto-v30-cyrillic_latin-700.woff2") format("woff2"), url("../fonts/roboto-v30-cyrillic_latin-700.woff") format("woff");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/open-sans-v35-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/open-sans-v35-cyrillic_latin-regular.woff") format("woff");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 700;
-  src: url("../fonts/open-sans-v35-cyrillic_latin-700.woff2") format("woff2"), url("../fonts/open-sans-v35-cyrillic_latin-700.woff") format("woff");
-}
-
-.page {
-  height: 100%;
-  box-sizing: border-box;
-  display: flex;
-  flex-flow: column nowrap;
-  @include center-block;
-
-  &__body {
-    margin: 0;
-    width: 100%;
-    overflow-x: hidden;
-    box-sizing: border-box;
-    background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%) fixed, url("../img/background.svg") center / 100% no-repeat fixed;
-    background-size: cover;
-  }
-}
-
-.header {
-  margin: 24px 0 0 0;
-
-  &__title {
-    overflow: hidden;
-    margin: 0 auto;
-    font-family: $main-family-text;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 55px;
-    text-align: center;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-}
-
-.main {
-  margin: 27px 0 0 0;
-  padding: 0 0 25px 0;
-}
-
-.card-list {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  gap: 32px;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0;
-
-  &__item {
-    position: relative;
-    width: 372px;
-    min-height: 372px;
-    box-sizing: border-box;
-  }
-}
-
-.card-wrapper {
-  color: $color-text;
-  list-style-type: none;
-  background: linear-gradient(180deg, rgba(10, 34, 64, 0.1) 0%, #0a2240 100%);
-  border-radius: $border-radius-medium;
-
-  &:hover {
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
-  }
-
-  &--selected:hover {
-    box-shadow: none;
-    cursor: pointer;
-  }
-}
-
-.card {
-  display: flex;
-  height: 100%;
-  box-sizing: border-box;
-  flex-flow: column nowrap;
-  justify-content: flex-end;
-  align-items: stretch;
-  padding: 24px 26px 24px 24px;
-
-  &__title-link {
-    text-decoration: none;
-  }
-
-  &__title {
-    margin: 0;
-    font-family: $main-family-text;
-    font-style: normal;
-    font-weight: 700;
-    @include big-text;
-    color: $color-text;
-
-    &:hover {
-      text-decoration: underline;
-    }
-
-    &:active {
-      color: rgba(255, 255, 255, 0.5);
-    }
-  }
-
-  &__description {
-    margin: 10px 0 0 0;
-    font-family: $second-family-text;
-    font-style: normal;
-    font-weight: 400;
-    @include middle-text;
-  }
-
-  &__line {
-    margin: 21px 0 15px 0;
-    height: 1px;
-    background: rgba(255, 255, 255, 0.2);
-    border: 0;
-  }
-
-  &__footer {
-    display: grid;
-    grid-template-columns: 117px 180px;
-    @include center-block;
-    column-gap: 27px;
-  }
-
-  &__area-button {
-    margin: 8px 0 0 0;
-  }
-}
-
-.area-price {
-  &__head {
-    margin: 1px 0 0 0;
-    font-family: $second-family-text;
-    font-style: normal;
-    font-weight: 700;
-    @include middle-text;
-  }
-
-  &__text {
-    margin: 0 0 -1px 0;
-    font-family: $main-family-text;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 19px;
-    line-height: 24px;
-  }
-
-  &__cost {
-    padding: 0 2px 0 2px;
-    @include big-text;
-    color: #ff4b77;
-  }
-
-  &__symbol-money {
-    font-family: -apple-system, "Open Sans", "Arial", sans-serif;
-    margin: 0 0 0 1px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 23px;
-    line-height: 32px;
-    color: #999999;
-  }
-}
-
-.button {
-  margin: 0;
-  padding: 12px 10px;
-  width: 100%;
-  font-family: $second-family-text;
-  font-style: normal;
-  font-weight: 700;
-  @include middle-text;
-  user-select: none;
-  color: $color-text;
-  outline: none;
-  border: 0;
-  background: #f91155;
-  border-radius: 5px;
-
-  &:hover {
-    cursor: pointer;
-    background: #d8003f;
-  }
-
-  &:active {
-    color: #f9637c;
-    background: #d8003f;
-  }
-
-  &__text {
-    margin: 0 0 0 2px;
-    pointer-events: none;
-  }
-}
-
-.card-wrapper {
-  &__image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: $border-radius-medium;
-  }
-
-  &__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.4);
-    border-radius: $border-radius-medium;
-  }
-
-  &__reserved-wrapper {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 3;
-    display: flex;
-    flex-flow: row nowrap;
-    @include center-block;
-    width: 100%;
-    min-height: 97px;
-    background: #3c3e43;
-    border-radius: 0 0 $border-radius-medium $border-radius-medium;
-  }
-
-  &__reserved {
-    display: flex;
-    height: 100%;
-    flex-flow: column nowrap;
-    @include center-block;
-  }
-}
-
-.card-wrapper--active > .card-wrapper__overlay,
-.card-wrapper--active > .card-wrapper__reserved-wrapper {
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 1s, visibility 0s 1s;
-}
-
-.card-wrapper--selected > .card-wrapper__overlay,
-.card-wrapper--selected > .card-wrapper__reserved-wrapper {
-  opacity: 1;
-  visibility: visible;
-  transition: opacity 1s, visibility 0s;
-}
-
-.reserved {
-  &__text {
-    margin: 0;
-    font-family: $second-family-text;
-    font-style: normal;
-    font-weight: 400;
-    @include small-text;
-    color: $color-text;
-    text-align: center;
-  }
-
-  &__text-link {
-    color: #ff4b77;
-    text-decoration: none;
-
-    &:hover {
-      cursor: pointer;
-      text-decoration: underline;
-    }
-
-    &:active {
-      color: #ff97b0;
-    }
-  }
-}
-
-.best-price {
-  position: absolute;
-  top: 25px;
-  left: 24px;
-  z-index: 10;
-  box-sizing: border-box;
-  visibility: hidden;
-  height: 30px;
-  padding: 4px 5px 0 16px;
-  border-radius: 3px 0 0 3px;
-  background: #ff7647;
-  opacity: 0;
-
-  &::after {
-    display: inline-block;
-    vertical-align: middle;
-    position: absolute;
-    top: 0;
-    margin: 0 0 0 4px;
-    content: "";
-    width: 36px;
-    height: 30px;
-    background: url(../img/icon_discount.svg) no-repeat;
-  }
-
-  &--active {
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 1s, visibility 0s 1s;
-  }
-
-  &__text {
-    display: inline-block;
-    vertical-align: middle;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    font-family: $main-family-text;
-    font-style: normal;
-    font-weight: 700;
-    @include small-text;
-    color: $color-text;
-    max-width: 175px;
-  }
-}
-
-.card-wrapper--active:hover > .best-price--active {
-  opacity: 1;
-  visibility: visible;
-  transition: opacity 1s, visibility 0s;
-}
-
-@media (min-width: 768px) and (max-width: 1279px) {
-  .header {
-    margin-top: 27px;
-  }
-  .main {
-    margin-top: 26px;
-  }
-  .card-list {
-    max-width: 800px;
-    margin: 0 auto;
-    gap: 37px 28px;
-
-    &__item {
-      width: 336px;
-      min-height: 420px;
-    }
-  }
-  .card {
-    padding: 24px;
-
-    &__title {
-      margin: 0 0 2px 0;
-    }
-
-    &__line {
-      margin: 21px 0 16px 0;
-    }
-
-    &__description {
-      margin-top: 8px;
-    }
-
-    &__footer {
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: center;
-      align-items: stretch;
-      row-gap: 16px;
-    }
-
-    &__area-button {
-      align-self: stretch;
-      margin-top: 0;
-    }
-  }
-  .card-wrapper {
-    &__reserved-wrapper {
-      min-height: 162px;
-    }
-  }
-}
-
-@media (max-width: 767px) {
-  .header {
-    margin-top: 24px;
-
-    &__title {
-      font-weight: 700;
-      @include big-text;
-    }
-  }
-  .main {
-    margin-top: 24px;
-  }
-  .card-list {
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    row-gap: 32px;
-
-    &__item {
-      display: flex;
-      justify-content: stretch;
-      align-items: flex-end;
-      width: 288px;
-      min-height: 347px;
-      border-radius: $border-radius-big;
-    }
-  }
-  .card {
-    padding: 21px;
-
-    &__title {
-      font-size: 20px;
-      line-height: 26px;
-    }
-
-    &__description {
-      margin: 11px 0 0 0;
-      @include small-text;
-    }
-
-    &__line {
-      margin: 20px 0 18px 0;
-    }
-
-    &__footer {
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: center;
-      align-items: stretch;
-      row-gap: 16px;
-    }
-
-    &__area-button {
-      align-self: stretch;
-      margin-top: 0;
-    }
-  }
-  .area-price {
-    &__head {
-      margin: 0;
-      @include small-text;
-    }
-
-    &__text {
-      font-size: 17px;
-      line-height: 21px;
-    }
-
-    &__cost {
-      font-size: 20px;
-      margin: 0 0 0 -1px;
-    }
-
-    &__symbol-money {
-      font-family: -apple-system, "Roboto", "Arial", sans-serif;
-      font-size: 20px;
-    }
-  }
-  .button {
-    padding: 9px 10px;
-    border-radius: 3px;
-    font-size: 14px;
-
-    &__text {
-      margin: -1px 0 1px 2px;
-    }
-  }
-  .card-wrapper {
-    &__image,
-    &__overlay {
-      border-radius: $border-radius-big;
-    }
-
-    &__reserved-wrapper {
-      min-height: 150px;
-      border-radius: 0 0 $border-radius-big $border-radius-big;
-    }
-  }
-}
+@use "global/variables" as *;
+@use "global/mixins" as *;
+@use "global/normalize";
+@use "global/fonts";
+@use "blocks/page";
+@use "blocks/header";
+@use "blocks/main";
+@use "blocks/card-list";
+@use "blocks/card-wrapper";
+@use "blocks/card";
+@use "blocks/area-price";
+@use "blocks/button";
+@use "blocks/reserved";
+@use "blocks/best-price";
