Изменение каталогов изображений

--- a/source/sass/blocks/best-price.scss
+++ b/source/sass/blocks/best-price.scss
@@ -22,7 +22,7 @@
     content: "";
     width: 36px;
     height: 30px;
-    background: url(../img/icon_discount.svg) no-repeat;
+    background: url(../images/icon_discount.svg) no-repeat;
   }
 
   &--active {
