--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,14 +1,14 @@
-@use "global/variables" as *;
-@use "global/mixins" as *;
-@use "global/normalize";
-@use "global/fonts";
-@use "blocks/page";
-@use "blocks/header";
-@use "blocks/main";
-@use "blocks/card-list";
-@use "blocks/card-wrapper";
-@use "blocks/card";
-@use "blocks/area-price";
-@use "blocks/button";
-@use "blocks/reserved";
-@use "blocks/best-price";
+@use "base/variables" as *;
+@use "base/mixins" as *;
+@use "base/normalize";
+@use "base/fonts";
+@use "layout/page";
+@use "layout/header";
+@use "layout/main";
+@use "components/card-list";
+@use "components/card-wrapper";
+@use "components/card";
+@use "components/area-price";
+@use "components/button";
+@use "components/reserved";
+@use "components/best-price";
