--- a/source/sass/components/card.scss
+++ b/source/sass/components/card.scss
@@ -27,11 +27,12 @@
   font-family: $main-family-text;
   font-style: normal;
   font-weight: 700;
-  @include big-text;
   color: $color-text;
 
+  @include big-text;
+
   @media (max-width: $tablet) {
-    margin: 0 0 2px 0;
+    margin: 0 0 2px;
   }
 
   @media (max-width: $mobile) {
@@ -44,15 +45,16 @@
   }
 
   &:active {
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 50%);
   }
 }
 
 .card__description {
-  margin: 10px 0 0 0;
+  margin: 10px 0 0;
   font-family: $second-family-text;
   font-style: normal;
   font-weight: 400;
+
   @include middle-text;
 
   @media (max-width: $tablet) {
@@ -60,30 +62,33 @@
   }
 
   @media (max-width: $mobile) {
-    margin: 11px 0 0 0;
+    margin: 11px 0 0;
+
     @include small-text;
   }
 }
 
 .card__line {
-  margin: 21px 0 15px 0;
+  margin: 21px 0 15px;
   height: 1px;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 20%);
   border: 0;
 
   @media (max-width: $tablet) {
-    margin: 21px 0 16px 0;
+    margin: 21px 0 16px;
   }
 
   @media (max-width: $mobile) {
-    margin: 20px 0 18px 0;
+    margin: 20px 0 18px;
   }
 }
 
 .card__footer {
   display: grid;
   grid-template-columns: 117px 180px;
+
   @include center-block;
+
   column-gap: 27px;
 
   @media (max-width: $tablet) {
