--- a/source/sass/components/area-price.scss
+++ b/source/sass/components/area-price.scss
@@ -2,20 +2,22 @@
 @use "../base/mixins" as *;
 
 .area-price__head {
-  margin: 1px 0 0 0;
+  margin: 1px 0 0;
   font-family: $second-family-text;
   font-style: normal;
   font-weight: 700;
+
   @include middle-text;
 
   @media (max-width: $mobile) {
     margin: 0;
+
     @include small-text;
   }
 }
 
 .area-price__text {
-  margin: 0 0 -1px 0;
+  margin: 0 0 -1px;
   font-family: $main-family-text;
   font-style: normal;
   font-weight: 700;
@@ -29,9 +31,10 @@
 }
 
 .area-price__cost {
-  padding: 0 2px 0;
-  @include big-text;
+  padding: 0 2px;
   color: #ff4b77;
+
+  @include big-text;
 
   @media (max-width: $mobile) {
     font-size: 20px;
