--- a/source/sass/components/card-wrapper.scss
+++ b/source/sass/components/card-wrapper.scss
@@ -4,11 +4,11 @@
 .card-wrapper {
   color: $color-text;
   list-style-type: none;
-  background: linear-gradient(180deg, rgba(10, 34, 64, 0.1) 0%, #0a2240 100%);
+  background: linear-gradient(180deg, rgba(10, 34, 64, 10%) 0%, #0a2240 100%);
   border-radius: $border-radius-medium;
 
   &:hover {
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 60%);
   }
 
   &--selected:hover {
@@ -59,7 +59,7 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 40%);
   border-radius: $border-radius-medium;
 
   @media (max-width: $mobile) {
@@ -74,9 +74,11 @@
   z-index: 3;
   display: flex;
   flex-flow: row nowrap;
-  @include center-block;
   width: 100%;
   min-height: 97px;
+
+  @include center-block;
+
   background: #3c3e43;
   border-radius: 0 0 $border-radius-medium $border-radius-medium;
 
@@ -94,5 +96,6 @@
   display: flex;
   height: 100%;
   flex-flow: column nowrap;
+
   @include center-block;
 }
