--- a/source/sass/layout/header.scss
+++ b/source/sass/layout/header.scss
@@ -2,7 +2,7 @@
 @use "../base/mixins" as *;
 
 .header {
-  margin: 24px 0 0 0;
+  margin: 24px 0 0;
 
   @media (max-width: $tablet) {
     margin-top: 27px;
@@ -28,6 +28,7 @@
 
   @media (max-width: $mobile) {
     font-weight: 700;
+
     @include big-text;
   }
 }
