--- a/source/sass/layout/main.scss
+++ b/source/sass/layout/main.scss
@@ -1,8 +1,8 @@
 @use "../base/variables" as *;
 
 .main {
-  margin: 27px 0 0 0;
-  padding: 0 0 25px 0;
+  margin: 27px 0 0;
+  padding: 0 0 25px;
 
   @media (max-width: $tablet) {
     margin-top: 26px;
