--- a/source/sass/layout/page.scss
+++ b/source/sass/layout/page.scss
@@ -4,6 +4,7 @@
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
+
   @include center-block;
 }
 
@@ -11,6 +12,6 @@
   margin: 0;
   width: 100%;
   overflow-x: hidden;
-  background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%) fixed, url("../images/background.svg") center / 100% no-repeat fixed;
+  background: linear-gradient(180deg, rgba(222, 237, 255, 60%) 0%, rgba(166, 204, 250, 50%) 100%) fixed, url("../images/background.svg") center / 100% no-repeat fixed;
   background-size: cover;
 }
