--- a/source/sass/base/fonts.scss
+++ b/source/sass/base/fonts.scss
@@ -3,7 +3,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/roboto-v30-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/roboto-v30-cyrillic_latin-regular.woff") format("woff");
+  src: url("../fonts/Roboto-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/roboto-v30-cyrillic_latin-500.woff2") format("woff2"), url("../fonts/roboto-v30-cyrillic_latin-500.woff") format("woff");
+  src: url("../fonts/Roboto-Medium.woff2") format("woff2");
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/roboto-v30-cyrillic_latin-700.woff2") format("woff2"), url("../fonts/roboto-v30-cyrillic_latin-700.woff") format("woff");
+  src: url("../fonts/Roboto-Bold.woff2") format("woff2");
 }
 
 @font-face {
@@ -27,7 +27,7 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/open-sans-v35-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/open-sans-v35-cyrillic_latin-regular.woff") format("woff");
+  src: url("../fonts/OpenSans-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -35,5 +35,5 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/open-sans-v35-cyrillic_latin-700.woff2") format("woff2"), url("../fonts/open-sans-v35-cyrillic_latin-700.woff") format("woff");
+  src: url("../fonts/OpenSans-Bold.woff2") format("woff2");
 }
